--- a/package.json
+++ b/package.json
@@ -1,65 +1,45 @@
 {
-  "name": "web3-provider-engine-updated",
-  "version": "16.0.1",
-  "description": "A retarded JavaScript library for composing Ethereum provider objects using middleware modules",
-  "repository": "https://github.com/MetaMask/web3-provider-engine",
-  "main": "index.js",
+  "name": "@backbonecabal/web3-provider-nginx",
+  "version": "0.8.0",
+  "description": "web3 provider engine typescript",
+  "repository": "https://github.com/backbonecabal/web3-provider-nginx",
+  "main": "dist/commonjs/index.js",
+  "module": "dist/modules/index.js",
+  "types": "dist/modules/index.d.ts",
   "scripts": {
-    "test": "node test/index.js && yarn lint",
-    "prepublishOnly": "yarn build && yarn bundle",
-    "build": "babel zero.js index.js -d dist/es5 && babel subproviders -d dist/es5/subproviders && babel util -d dist/es5/util",
-    "bundle": "mkdir -p ./dist && yarn bundle-engine && yarn bundle-zero",
-    "bundle-zero": "browserify -s ZeroClientProvider -e zero.js -t [ babelify --presets [ @babel/preset-env ] ] > dist/ZeroClientProvider.js",
-    "bundle-engine": "browserify -s ProviderEngine -e index.js -t [ babelify --presets [ @babel/preset-env ] ] > dist/ProviderEngine.js",
-    "lint": "eslint --quiet --ignore-path .gitignore ."
+    "test": "ts-node node_modules/tape/bin/tape test/index.ts",
+    "prepublish": "npm run build",
+    "build": "tsc && tsc -p tsconfig.module.json",
+    "lint": "eslint --ignore-path .gitignore --fix ."
   },
-  "files": [
-    "*.js",
-    "dist",
-    "subproviders",
-    "util"
-  ],
+  "author": "SEE CONTRIBUTORS",
   "license": "MIT",
-  "resolutions": {
-    "ganache-core/**/elliptic": "^6.5.2"
-  },
   "dependencies": {
-    "async": "^2.5.0",
-    "backoff": "^2.5.0",
+    "async": "3.2.0",
+    "bn.js": "^4.11.8",
     "clone": "^2.0.0",
-    "cross-fetch": "^2.1.0",
+    "cross-fetch": "^3.0.6",
     "eth-block-tracker": "^4.4.2",
-    "eth-json-rpc-filters": "^4.2.1",
-    "eth-json-rpc-infura": "^5.1.0",
-    "eth-json-rpc-middleware": "^6.0.0",
-    "eth-rpc-errors": "^3.0.0",
-    "eth-sig-util": "^1.4.2",
-    "ethereumjs-block": "^1.2.2",
-    "ethereumjs-tx": "^1.2.0",
-    "ethereumjs-util": "^5.1.5",
-    "ethereumjs-vm": "^2.3.4",
+    "eth-json-rpc-filters": "^4.1.1",
+    "eth-json-rpc-middleware": "^4.1.5",
+    "ethjs-util": "^0.1.6",
+    "json-rpc-error": "^2.0.0",
     "json-stable-stringify": "^1.0.1",
     "promise-to-callback": "^1.0.0",
-    "readable-stream": "^2.2.9",
-    "request": "^2.85.0",
-    "semaphore": "^1.0.3",
-    "ws": "^5.1.1",
-    "xhr": "^2.2.0",
-    "xtend": "^4.0.1"
+    "xtend": "^4.0.2"
   },
   "devDependencies": {
-    "@babel/cli": "^7.5.5",
     "@babel/core": "^7.5.5",
     "@babel/preset-env": "^7.5.5",
+    "@types/events": "^3.0.0",
+    "@types/node": "^12.0.2",
+    "@typescript-eslint/eslint-plugin": "^4.1.1",
+    "@typescript-eslint/parser": "^4.1.1",
     "babelify": "^10.0.0",
     "browserify": "^16.5.0",
-    "eslint": "^6.2.0",
-    "ethjs": "^0.3.6",
-    "ganache-core": "^2.13.0",
-    "tape": "^4.4.0"
-  },
-  "browser": {
-    "request": false,
-    "ws": false
+    "eslint": "^7.9.0",
+    "tape": "^4.4.0",
+    "ts-node": "^8.1.0",
+    "typescript": "^3.4.5"
   }
 }
