--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@backbonecabal/web3-provider-nginx",
-  "version": "0.8.0",
+  "version": "17.0.0",
   "description": "web3 provider engine typescript",
   "repository": "https://github.com/backbonecabal/web3-provider-nginx",
   "main": "dist/commonjs/index.js",
@@ -15,13 +15,16 @@
   "author": "SEE CONTRIBUTORS",
   "license": "MIT",
   "dependencies": {
+    "@metamask/safe-event-emitter": "^2.0.0",
     "async": "3.2.0",
     "bn.js": "^4.11.8",
     "clone": "^2.0.0",
     "cross-fetch": "^3.0.6",
     "eth-block-tracker": "^4.4.2",
+    "eth-json-rpc-backbone": "^5.10.0",
     "eth-json-rpc-filters": "^4.1.1",
     "eth-json-rpc-middleware": "^4.1.5",
+    "eth-rpc-errors": "^4.0.2",
     "ethjs-util": "^0.1.6",
     "json-rpc-error": "^2.0.0",
     "json-stable-stringify": "^1.0.1",
@@ -38,6 +41,7 @@
     "babelify": "^10.0.0",
     "browserify": "^16.5.0",
     "eslint": "^7.9.0",
+    "semantic-release": "^17.4.1",
     "tape": "^4.4.0",
     "ts-node": "^8.1.0",
     "typescript": "^3.4.5"
