--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
   "author": "SEE CONTRIBUTORS",
   "license": "MIT",
   "dependencies": {
+    "@etclabscore/ethereum-json-rpc": "^1.3.13",
     "@metamask/safe-event-emitter": "^2.0.0",
+    "@types/ws": "^7.4.0",
     "async": "3.2.0",
     "bn.js": "^4.11.8",
     "clone": "^2.0.0",
