--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "eth-block-tracker": "^4.4.2",
     "eth-json-rpc-backbone": "^5.10.0",
     "eth-json-rpc-filters": "^4.1.1",
-    "eth-json-rpc-middleware": "^4.1.5",
+    "eth-json-rpc-middleware": "git+https://github.com/sambacha/eth-json-rpc-middleware",
     "eth-rpc-errors": "^4.0.2",
     "ethjs-util": "^0.1.6",
     "json-rpc-error": "^2.0.0",
