--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@backbonecabal/web3-provider-nginx",
+  "name": "web3-provider-engine",
   "version": "17.0.0",
   "description": "web3 provider engine typescript",
   "repository": "https://github.com/backbonecabal/web3-provider-nginx",
