--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "eth-block-tracker": "^4.4.2",
     "eth-json-rpc-filters": "^4.2.1",
     "eth-json-rpc-infura": "^5.1.0",
-    "eth-json-rpc-middleware": "https://github.com/sambacha/eth-json-rpc-middleware/releases/download/tgz/eth-json-rpc-middleware-7.0.0.tgz",
+    "eth-json-rpc-middleware": "github:sambacha/eth-json-rpc-middleware",
     "eth-rpc-errors": "^3.0.0",
     "eth-sig-util": "^1.4.2",
     "ethereumjs-block": "^1.2.2",
